<resources>
    <string name="app_name">Healthypath</string>
    <string name="ambiente_saludable">Ambiente saludable</string>
    <string name="healthypath">Healthypath</string>
    <string name="ir_a_la_seccion">Ir a la sección</string>
    <string name="saludseccion">Saludsección</string>
    <string name="nutricion">Nutrición</string>
    <string name="actividad">Actividad</string>
    <string name="sue_o">Sueño</string>
    <string name="back">back</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="nutrici_n">Nutrición</string>
    <string name="ingresa_tus_datos">Ingresa tus datos:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="altura">Altura:1.56</string>
    <string name="calcular">Calcular</string>
    <string name="peso">Peso…</string>
    <string name="descriptiontxt">Para medir el estado nutritivo en el que se encuentra una persona utilizamos el IMC. El Índice de Masa Corporal (IMC) es una medida que se utiliza para evaluar si una persona tiene un peso saludable en relación con su estatura.
        Aunque tampoco es unidad de medición 100% precisa, es viable utilizarla.
    </string>
    <string name="resultados_del_calculo">Resultados del cálculo</string>
    <string name="resultadosimc">• IMC menor a 18.5: Se considera bajo peso.</string>
    <string name="buenpeso">• IMC entre 18.5 y 24.9: Se considera peso saludable o normal.</string>
    <string name="sobrepeso">• IMC entre 25 y 29.9: Se considera sobrepeso.</string>
    <string name="obesidad">• IMC de 30 o más: Se considera obesidad.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tu_imc_es_de">Tu IMC es de:</string>
    <string name="a_c_e_p_t_a_r">A c e p t a r</string>
    <string name="calistenia">Calistenia</string>
    <string name="levantamiento_de_pesas">Levantamiento de pesas</string>
    <string name="gym">GYM</string>
    <string name="calistenico">Calistenia</string>
    <string name="cardcalis">Calistenia</string>
    <string name="aerobico">Aeróbico</string>
    <string name="anaerobico">Anaeróbico</string>
    <string name="pesas">GYM</string>
    <string name="actividad_fisica">Actividad Física</string>
    <string name="definicion_af">La actividad física es el movimiento que desarrolla un individuo, fomentando el consumo de energía. Para cualquier ser humano,
        por lo tanto, realizar actividad física con frecuencia es indispensable para el mantenimiento de la salud.</string>
    <string name="que_es">¿Qué es?</string>
    <string name="defcalis">La <b>calistenia</b> es un sistema de entrenamiento físico que utiliza el propio peso corporal como resistencia para desarrollar la fuerza, la resistencia, la flexibilidad y la coordinación.\n</string>
    <string name="defgym">El <b>gimnasio</b> es un establecimiento o lugar que está equipado con diversos aparatos, máquinas y espacios dedicados a la actividad física y al ejercicio. En esta sección nos enfocaremos principalmente en el ejercicio con pesas.</string>
    <string name="descanso">Se recomienda descansar de entre 3 a 5 minutos entre series para el entreno correcto. Entrenar 5 días por semana, con una buena alimentación y horas cálidas de sueño.</string>
    <string name="valuesPropositos">
        Mejorar la salud cardiovascular.\n
        Aumentar la fuerza y la masa muscular.\n
        Perder peso o grasa corporal.\n
        Mejorar la flexibilidad y la movilidad.\n
        Tonificar el cuerpo.\n
        Mejorar el rendimiento deportivo.\n
        Rehabilitación física.\n
        Reducir el estrés y mejorar el bienestar general.\n
        Socializar.\n
        Mejorar la postura.\n
        Mejorar el estado físico en general.\n
    </string>
    <string name="alimentos">
        <b>Fibra:</b> Verduras y Hortalizas como, brócoli, espinaca, zanahoria, lechuga, tomate, entre otros.\n
        <b>Proteína</b>: Carnes, pescados, como la pechuga de pollo, pechuga de pavo, salmón, atún, y la proteína del huevo.\n
        <b>Carbohidratos:</b> Arroz, pasta, harina, pan, avena, entre otros.\n
        <b>Grasas saludables:</b> Aguacate, aceite de oliva, frutos secos, entre otros.
    </string>
    <string name="recomedaciones_aerobic">
        * <b>Fortalecimiento del corazón:</b> El ejercicio aeróbico ayuda a que el corazón funcione de manera más eficiente.\n\n
        * <b>Reducción de riesgos de salud:</b> El ejercicio aeróbico puede ayudar a reducir el riesgo de enfermedades cardíacas, diabetes, hipertensión, y colesterol alto.\n\n
        * <b>Mejora del estado de ánimo:</b> El ejercicio aeróbico puede ayudar a reducir el estrés y mejorar la confianza en uno mismo.\n\n
        * <b>Control del peso:</b> El ejercicio aeróbico puede ayudar a controlar el peso corporal.
    </string>
    <string name="bengym">
        * Fortalece los huesos y músculos.\n\n
        * Mejora la circulación.\n\n
        * Reduce el riesgo de enfermedades del corazón.\n\n
        * Ayuda a controlar el peso.\n\n
        * Reduce el riesgo de diabetes y presión arterial alta.\n\n
        * Ayuda a controlar los niveles de glucosa en la sangre.\n
        * Ayuda a reducir la inflamación en el cuerpo.\n\n
        * Ayuda a fortalecer el sistema inmunitario.
    </string>
    <string name="bencalistenia">
        *<b>Fuerza funcional:</b> Al utilizar el peso corporal, la calistenia fortalece los músculos de forma natural y funcional, mejorando la capacidad para realizar actividades cotidianas, según <u>Medical Exercise</u>.\n\n
        *<b>Flexibilidad y agilidad:</b> Los movimientos de calistenia requieren un amplio rango de movimiento, lo que aumenta la flexibilidad y la agilidad, reduciendo el riesgo de lesiones.\n\n
        *<b>Resistencia muscular:</b> Con la práctica regular, la calistenia ayuda a aumentar la resistencia muscular, lo que permite realizar más repeticiones y series.\n\n
        *<b>Mejora del equilibrio y la coordinación:</b> Muchos ejercicios de calistenia requieren equilibrio y coordinación, lo que contribuye a mejorar estos aspectos.\n\n
        *<b>Aumento de la masa muscular:</b> La calistenia puede ayudar a aumentar la masa muscular, lo que puede mejorar la apariencia física y la fuerza.
    </string>
    <string name="sobrecarga">
        <b>1. Aumento del Peso (Resistencia):</b> Es la forma más directa. Si puedes levantar 10 kg en press de banca 10 veces, la próxima vez intenta levantar 12 kg las mismas 10 veces.\n\n
        <b>2. Aumento de las Repeticiones:</b> Si puedes hacer 8 repeticiones con un peso determinado, la próxima vez intenta hacer 9 o 10 repeticiones con el mismo peso.\n\n
        <b>3. Aumento de las Series:</b> Si haces 3 series de un ejercicio, la próxima vez intenta hacer 4 series con el mismo peso y repeticiones.\n\n
        <b>4. Aumento de la Frecuencia de Entrenamiento:</b> Si entrenas un músculo una vez por semana, intenta entrenarlo dos veces por semana.\n\n
    </string>
    <string name="mentalesgym">
        * Mejora el estado de ánimo.\n\n
        * Ayuda a lidiar con el estrés.\n\n
        * Controla la ansiedad.\n\n
        * Reduce el riesgo de depresión.\n\n
        * Mejora la memoria.\n\n
        * Aumenta la calidad del sueño.
    </string>
    <string name="consecuencias_de_no_dormir">
            * Fatiga y somnolencia diurna.\n
            * Dificultad para concentrarse y prestar atención.\n
            * Problemas de memoria.\n
            * Irritabilidad y cambios de humor.\n
            * Debilitamiento del sistema inmunológico.\n
            * Mayor riesgo de enfermedades crónicas.\n
            * Aumento del riesgo de accidentes.\n
            * Disminucion de la calidad de vida\n
        </string>
    <string name="causas_insomni">
            <b>Estrés y Preocupaciones:</b> Pensamientos recurrentes, preocupaciones por el trabajo, las finanzas, o las relaciones personales.\n
            <b>Trastornos Mentales:</b> Ansiedad, depresión, trastorno bipolar, trastorno de estrés postraumático (TEPT).\n
            <b>Condiciones Médicas:</b> Dolor crónico, enfermedades cardíacas, problemas respiratorios, hipertiroidismo, reflujo gastroesofágico, entre otros.\n
            <b>Malos Hábitos de Sueño:</b> Horarios de sueño irregulares, uso de pantallas antes de dormir, siestas largas durante el día, consumo de cafeína o alcohol antes de dormir.\n
        </string>
    <string name="sintomas_insomnio">
            * Dificultad para conciliar el sueño (tardar más de 30 minutos en dormirse).\n
            * Despertares frecuentes durante la noche.\n
            * Despertarse demasiado temprano por la mañana y no poder volver a dormir.\n
            * Sentirse cansado o no descansado al despertar.\n
            * Dolores de cabeza.\n
            * Problemas gastrointestinales.

        </string>
    <string name="tratamiento_insomnio">
            <b>1.Mejora de la Higiene del Sueño:</b>\n\t
            * Establecer un horario regular para dormir y despertar.\n\t
            * Crear un ambiente de sueño tranquilo, oscuro y cómodo.\n
            <b>2.Crear una rutina relajante antes de dormir:</b> Esto puede incluir leer, tomar un baño caliente, escuchar música suave o practicar técnicas de relajación.\n
            <b>3.Hacer ejercicio regularmente, pero no cerca de la hora de acostarse:</b> El ejercicio puede mejorar el sueño, pero hacerlo justo antes de dormir puede ser estimulante.\n
            <b>4.Limitar las siestas durante el día:</b> Si se toman siestas, que sean cortas (20-30 minutos) y no al final de la tarde.

        </string>
    <string name="defaerobico">Los <b>ejercicios aeróbicos</b> (también conocidos como ejercicios cardiovasculares o cardio) son actividades físicas de intensidad moderada que se realizan durante un periodo prolongado de tiempo, y que requieren el uso continuo de oxígeno para producir la energía necesaria para sostener el esfuerzo.</string>
    <string name="importancia_puntos_dream">El sueño es fundamental para la recuperación muscular después del ejercicio o de la actividad física. La falta de sueño puede dificultar el crecimiento muscular y aumentar el riesgo de lesiones.</string>
    <string name="ingestaProteica">Para una disciplina como el levantamiento de pesas, orientada a la ganacia de peso y aumento de masa muscular, es necesario dividir el plato en 4 partes, donde la <b>proteina</b> sea el alimento a consumir con mayor porcentaje con un 40%, los <b>carbohidratos</b> con 30%, la <b>grasa</b> con un 20% y la <b>fibra</b> con un 10%.</string>
    <string name="se_recomienda_entrenar_de_3_a_5_dias_a_la_semana_dependiendo_de_la_alimentacion_que_posea_la_persona_y_el_indice_de_masa_corporal_que_tenga_por_ejemplo_una_persona_con_un_imc_por_encima_o_debajo_del_promedio_necesita_hacer_ejercicio_urgentemente">Se recomienda entrenar de 3 a 5 dias a la semana, dependiendo de la alimentacion que posea la persona, y el indice de masa corporal que tenga. Por ejemplo, una persona con un IMC por encima o debajo del promedio, necesita hacer ejercicio urgentemente.</string>
    <string name="disminuir">Para una disciplina como el levantamiento de pesas, orientada a la disminucion de peso y perdida de grasa corporal, es necesario dividir el plato en 3 partes, donde la <b>fibra</b> sea el alimento a consumir con mayor porcentaje con un 50%, los <b>carbohidratos</b> y la <b>proteina</b> con un 25%.</string>
    <string name="calcularL">Calcular</string>
    <string name="ingrese_su_peso">Ingrese su peso</string>
    <string name="atras">atras</string>
    <string name="healthy_bot">HealthyBot</string>
    <string name="healthy_bot_subtitle">Asistente de bienestar</string>
    <string name="chatbot_placeholder">¿Qué estás pensando?</string>
    <string name="chatbot_empty_message">Pregúntame lo que desees sobre nutrición, actividad física o sueño.</string>
    <string name="btn_send">Enviar</string>
</resources>