<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".nutrition.NutritionViewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".nutrition.NutritionViewActivity">

        <View
            android:id="@+id/principal"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@drawable/header_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/nutrici_n"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/principal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/circle_button"
            android:contentDescription="@string/back"
            android:elevation="4dp"
            android:pointerIcon="hand"
            android:scaleType="center"
            android:src="@drawable/backleft"
            app:layout_constraintBottom_toBottomOf="@id/principal"
            app:layout_constraintLeft_toLeftOf="@id/principal"
            app:layout_constraintTop_toTopOf="@id/principal"
            app:tint="@color/DarkBlue"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/border_style"
            android:elevation="4dp"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="3dp"
            android:padding="18dp"
            android:text="@string/descriptiontxt"
            android:textAlignment="textStart"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_light"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/principal" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/containeredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/border_style"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description">

            <TextView
                android:id="@+id/datos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/newcolorbg"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:paddingVertical="10dp"
                android:text="@string/ingresa_tus_datos"
                android:textColor="@color/DarkBlue"
                android:textSize="20sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/man"
                    android:layout_width="150dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="8dp"
                    android:focusableInTouchMode="true"
                    app:cardBackgroundColor="@color/DarkBlue"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/hombre"
                            android:src="@mipmap/marte"
                            android:layout_marginRight="5dp"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:text="@string/male"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/woman"
                    android:layout_width="150dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    app:cardBackgroundColor="@color/DarkBlue"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/mujer"
                            android:src="@mipmap/venus"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:text="@string/female"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/peso"
                style="@style/Widget.Healthypath.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:digits="0123456789"
                android:hint="@string/peso"
                android:inputType="numberDecimal"
                android:maxLength="3"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/altura"
                style="@style/Widget.Healthypath.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:digits="0123456789"
                android:hint="@string/altura"
                android:inputType="numberDecimal"
                android:maxLength="3"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            style="@style/Widget.Healthypath.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/calcular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containeredit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>