<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface"
    tools:context=".nutrition.DialogResult">

    <View
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@drawable/header_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/resultados_del_calculo"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/principal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boxResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/principal">

        <LinearLayout
            android:id="@+id/elements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/boxresult"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/tu_imc_es_de"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/correct"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:minWidth="120dp"
                android:paddingHorizontal="28dp"
                android:paddingVertical="12dp"
                android:textColor="@color/DarkBlue"
                android:textSize="40sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/referencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/border_style"
            android:lineSpacingExtra="5dp"
            android:orientation="vertical"
            android:padding="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/elements">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:letterSpacing="0.03"
                android:text="@string/resultadosimc"
                android:textColor="@color/text_primary"
                android:textSize="15.5sp"
                android:textStyle="normal"
                android:fontFamily="@font/poppins_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:letterSpacing="0.03"
                android:text="@string/buenpeso"
                android:textColor="@color/text_primary"
                android:textSize="15.5sp"
                android:textStyle="normal"
                android:fontFamily="@font/poppins_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:letterSpacing="0.03"
                android:text="@string/sobrepeso"
                android:textColor="@color/text_primary"
                android:textSize="15.5sp"
                android:textStyle="normal"
                android:fontFamily="@font/poppins_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.03"
                android:text="@string/obesidad"
                android:textColor="@color/text_primary"
                android:textSize="15.5sp"
                android:textStyle="normal"
                android:fontFamily="@font/poppins_light" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>